--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <p>Hello world!</p>
-    <p id="date"></p>
+    <p id="time"></p>
     <script src="Script.js"></script>
 </body>
 </html>
