--- a/index.html
+++ b/index.html
@@ -4,10 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <p>Hello world!</p>
     <p id="time"></p>
-    <script src="Script.js"></script>
+    <p id="hint1"></p>
+    <p id="hint2"></p>
+    <p id="hint3"></p>
+    <p id="hint4"></p>
+    <p id="hint5"></p>
+    <script src="script_obfuscated.js"></script>
 </body>
 </html>
