minor text fixes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <p>Hello world!</p>
+    <h1>Pee Rahat!</h1>
     <p id="time"></p>
     <p id="hint1"></p>
     <p id="hint2"></p>
